<resources>
    <string name="app_name">Donation.1.0</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">"Please Give Generously "</string>
    <string name="donateButton">DONATE</string>
    <string name="radioPayPal">PayPal</string>
    <string name="radioDirect">Direct</string>
    <string name="menuReport">Report</string>
    <string name="menuSettings">Settings</string>
    <string name="title_activity_report">ReportActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>